--- a/Practice_2/Practice_2/Base.lproj/Main.storyboard
+++ b/Practice_2/Practice_2/Base.lproj/Main.storyboard
@@ -16,17 +16,53 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="6En-6m-RYg">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="200" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="6En-6m-RYg">
                                 <rect key="frame" x="0.0" y="36" width="414" height="807"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="checkmark" indentationWidth="10" reuseIdentifier="cell" id="tlW-fJ-ksz">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="200" id="tlW-fJ-ksz" customClass="ListCell" customModule="Practice_2" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="200"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="tlW-fJ-ksz" id="3gh-Yh-GZu">
-                                            <rect key="frame" x="0.0" y="0.0" width="370" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="200"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="UWo-gq-EEy">
+                                                    <rect key="frame" x="15" y="10" width="124.5" height="178"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="UWo-gq-EEy" secondAttribute="height" multiplier="7:10" id="XMZ-qS-A2q"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Luffy" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ntI-YE-c77">
+                                                    <rect key="frame" x="197" y="60" width="182" height="30"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="3000000" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q5S-yw-wKM">
+                                                    <rect key="frame" x="218" y="98" width="140" height="36"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
+                                                    <color key="textColor" systemColor="systemGray2Color"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="UWo-gq-EEy" firstAttribute="leading" secondItem="3gh-Yh-GZu" secondAttribute="leading" constant="15" id="7TW-o1-W62"/>
+                                                <constraint firstItem="ntI-YE-c77" firstAttribute="centerY" secondItem="3gh-Yh-GZu" secondAttribute="centerY" constant="-25" id="9XT-3e-lWs"/>
+                                                <constraint firstItem="Q5S-yw-wKM" firstAttribute="top" secondItem="ntI-YE-c77" secondAttribute="bottom" constant="8" symbolic="YES" id="FSX-pk-Nid"/>
+                                                <constraint firstItem="UWo-gq-EEy" firstAttribute="centerY" secondItem="3gh-Yh-GZu" secondAttribute="centerY" id="XxU-6K-3KJ"/>
+                                                <constraint firstAttribute="trailing" secondItem="ntI-YE-c77" secondAttribute="trailing" constant="35" id="dCu-7Y-lIN"/>
+                                                <constraint firstItem="UWo-gq-EEy" firstAttribute="top" secondItem="3gh-Yh-GZu" secondAttribute="top" constant="10" id="htt-WH-Wpn"/>
+                                                <constraint firstItem="ntI-YE-c77" firstAttribute="leading" secondItem="UWo-gq-EEy" secondAttribute="trailing" constant="57.5" id="jUQ-Pr-FPF"/>
+                                                <constraint firstItem="UWo-gq-EEy" firstAttribute="height" secondItem="3gh-Yh-GZu" secondAttribute="height" multiplier="0.89" id="wjE-6W-IfH"/>
+                                                <constraint firstItem="Q5S-yw-wKM" firstAttribute="centerX" secondItem="ntI-YE-c77" secondAttribute="centerX" id="xsW-pq-wkp"/>
+                                            </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="bountyLabel" destination="Q5S-yw-wKM" id="isn-HO-E7C"/>
+                                            <outlet property="imgView" destination="UWo-gq-EEy" id="LpU-er-Byc"/>
+                                            <outlet property="nameLabel" destination="ntI-YE-c77" id="v2O-04-EJx"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                                 <connections>
@@ -53,6 +89,9 @@
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGray2Color">
+            <color red="0.68235294117647061" green="0.68235294117647061" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
