--- a/Practice_2/Practice_2/Base.lproj/Main.storyboard
+++ b/Practice_2/Practice_2/Base.lproj/Main.storyboard
@@ -20,7 +20,7 @@
                                 <rect key="frame" x="0.0" y="36" width="414" height="807"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="200" id="tlW-fJ-ksz" customClass="ListCell" customModule="Practice_2" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="cell" rowHeight="200" id="tlW-fJ-ksz" customClass="ListCell" customModule="Practice_2" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="414" height="200"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="tlW-fJ-ksz" id="3gh-Yh-GZu">
@@ -80,13 +80,79 @@
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="top" secondItem="6En-6m-RYg" secondAttribute="top" constant="8" id="uwp-13-2Io"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <segue destination="Dh6-4I-c02" kind="modal" identifier="showDetail" id="blq-Vu-mXZ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="140.57971014492756" y="103.79464285714285"/>
         </scene>
+        <!--Detail View Controller-->
+        <scene sceneID="t2r-vU-13t">
+            <objects>
+                <viewController id="Dh6-4I-c02" customClass="DetailViewController" customModule="Practice_2" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="B31-ra-0Ex">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NdC-nf-dhg">
+                                <rect key="frame" x="349" y="20" width="50" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="r1d-Bu-Gpf"/>
+                                    <constraint firstAttribute="width" constant="50" id="vmM-qW-BgW"/>
+                                </constraints>
+                                <state key="normal" title="Button" image="close_ic"/>
+                                <connections>
+                                    <action selector="closeButton:" destination="Dh6-4I-c02" eventType="touchUpInside" id="qiJ-b5-JLb"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Luffy" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kgm-cH-ybC">
+                                <rect key="frame" x="112" y="554" width="193" height="69"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="30000000" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cM0-Zs-Fk1">
+                                <rect key="frame" x="127" y="707" width="160" height="36"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
+                                <color key="textColor" systemColor="systemGray2Color"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bO6-WM-ASm">
+                                <rect key="frame" x="58" y="151" width="300" height="326"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="326" id="Rm9-kl-0zn"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="JDb-18-pqb"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="NdC-nf-dhg" firstAttribute="top" secondItem="JDb-18-pqb" secondAttribute="top" constant="20" id="0t5-qT-5gh"/>
+                            <constraint firstItem="bO6-WM-ASm" firstAttribute="top" secondItem="JDb-18-pqb" secondAttribute="top" constant="183" id="62K-jX-ymy"/>
+                            <constraint firstItem="cM0-Zs-Fk1" firstAttribute="top" secondItem="kgm-cH-ybC" secondAttribute="bottom" constant="50" id="9C8-vc-y0V"/>
+                            <constraint firstItem="bO6-WM-ASm" firstAttribute="leading" secondItem="JDb-18-pqb" secondAttribute="leading" constant="56" id="MJG-dz-HdD"/>
+                            <constraint firstItem="JDb-18-pqb" firstAttribute="trailing" secondItem="NdC-nf-dhg" secondAttribute="trailing" constant="15" id="fQs-0N-e92"/>
+                            <constraint firstItem="kgm-cH-ybC" firstAttribute="centerX" secondItem="JDb-18-pqb" secondAttribute="centerX" id="gjg-9I-XOP"/>
+                            <constraint firstItem="cM0-Zs-Fk1" firstAttribute="centerX" secondItem="JDb-18-pqb" secondAttribute="centerX" id="ozL-OU-R6p"/>
+                            <constraint firstItem="JDb-18-pqb" firstAttribute="bottom" secondItem="cM0-Zs-Fk1" secondAttribute="bottom" constant="65" id="rRa-KW-qET"/>
+                            <constraint firstItem="JDb-18-pqb" firstAttribute="trailing" secondItem="bO6-WM-ASm" secondAttribute="trailing" constant="58" id="zKU-dt-l3g"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="bountyLabel" destination="cM0-Zs-Fk1" id="VLK-9K-G1m"/>
+                        <outlet property="image" destination="bO6-WM-ASm" id="Erv-mJ-PNj"/>
+                        <outlet property="nameLabel" destination="kgm-cH-ybC" id="ebl-YE-zHC"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9Nj-wn-J1J" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1095.6521739130435" y="103.79464285714285"/>
+        </scene>
     </scenes>
     <resources>
+        <image name="close_ic" width="128" height="128"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
