--- a/Practice_2/Practice_2/Base.lproj/Main.storyboard
+++ b/Practice_2/Practice_2/Base.lproj/Main.storyboard
@@ -5,6 +5,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -16,68 +17,74 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="200" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="6En-6m-RYg">
-                                <rect key="frame" x="0.0" y="36" width="414" height="807"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="7uO-ex-tqB">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="cell" rowHeight="200" id="tlW-fJ-ksz" customClass="ListCell" customModule="Practice_2" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="200"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="tlW-fJ-ksz" id="3gh-Yh-GZu">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="200"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="4Gt-rC-gnP">
+                                    <size key="itemSize" width="200" height="350"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="GridCell" id="21p-j0-Bot" customClass="GridCell" customModule="Practice_2" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="200" height="350"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="gWg-dh-5Eg">
+                                            <rect key="frame" x="0.0" y="0.0" width="200" height="350"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="UWo-gq-EEy">
-                                                    <rect key="frame" x="15" y="10" width="124.5" height="178"/>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="yyn-jP-jnl">
+                                                    <rect key="frame" x="0.0" y="0.0" width="200" height="285.5"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" secondItem="UWo-gq-EEy" secondAttribute="height" multiplier="7:10" id="XMZ-qS-A2q"/>
+                                                        <constraint firstAttribute="width" secondItem="yyn-jP-jnl" secondAttribute="height" multiplier="7:10" id="vVc-iU-ZDT"/>
                                                     </constraints>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Luffy" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ntI-YE-c77">
-                                                    <rect key="frame" x="197" y="60" width="182" height="30"/>
-                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
-                                                    <nil key="textColor"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="300000000" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FLc-Lq-yke">
+                                                    <rect key="frame" x="20" y="321.5" width="101" height="21"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                                    <color key="textColor" systemColor="systemGray2Color"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="3000000" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q5S-yw-wKM">
-                                                    <rect key="frame" x="218" y="98" width="140" height="36"/>
-                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
-                                                    <color key="textColor" systemColor="systemGray2Color"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Luffy" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k72-fq-607">
+                                                    <rect key="frame" x="20" y="295.5" width="45" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="17"/>
+                                                    <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="UWo-gq-EEy" firstAttribute="leading" secondItem="3gh-Yh-GZu" secondAttribute="leading" constant="15" id="7TW-o1-W62"/>
-                                                <constraint firstItem="ntI-YE-c77" firstAttribute="centerY" secondItem="3gh-Yh-GZu" secondAttribute="centerY" constant="-25" id="9XT-3e-lWs"/>
-                                                <constraint firstItem="Q5S-yw-wKM" firstAttribute="top" secondItem="ntI-YE-c77" secondAttribute="bottom" constant="8" symbolic="YES" id="FSX-pk-Nid"/>
-                                                <constraint firstItem="UWo-gq-EEy" firstAttribute="centerY" secondItem="3gh-Yh-GZu" secondAttribute="centerY" id="XxU-6K-3KJ"/>
-                                                <constraint firstAttribute="trailing" secondItem="ntI-YE-c77" secondAttribute="trailing" constant="35" id="dCu-7Y-lIN"/>
-                                                <constraint firstItem="UWo-gq-EEy" firstAttribute="top" secondItem="3gh-Yh-GZu" secondAttribute="top" constant="10" id="htt-WH-Wpn"/>
-                                                <constraint firstItem="ntI-YE-c77" firstAttribute="leading" secondItem="UWo-gq-EEy" secondAttribute="trailing" constant="57.5" id="jUQ-Pr-FPF"/>
-                                                <constraint firstItem="UWo-gq-EEy" firstAttribute="height" secondItem="3gh-Yh-GZu" secondAttribute="height" multiplier="0.89" id="wjE-6W-IfH"/>
-                                                <constraint firstItem="Q5S-yw-wKM" firstAttribute="centerX" secondItem="ntI-YE-c77" secondAttribute="centerX" id="xsW-pq-wkp"/>
+                                                <constraint firstItem="yyn-jP-jnl" firstAttribute="leading" secondItem="gWg-dh-5Eg" secondAttribute="leading" id="Bya-qd-WJk"/>
+                                                <constraint firstAttribute="trailing" secondItem="yyn-jP-jnl" secondAttribute="trailing" id="Do7-44-Hnc"/>
+                                                <constraint firstItem="FLc-Lq-yke" firstAttribute="top" secondItem="k72-fq-607" secondAttribute="bottom" constant="5" id="JNX-h5-imV"/>
+                                                <constraint firstItem="FLc-Lq-yke" firstAttribute="leading" secondItem="k72-fq-607" secondAttribute="leading" id="LB4-bI-7ff"/>
+                                                <constraint firstItem="k72-fq-607" firstAttribute="leading" secondItem="gWg-dh-5Eg" secondAttribute="leading" constant="20" id="RfA-Np-qBa"/>
+                                                <constraint firstItem="yyn-jP-jnl" firstAttribute="top" secondItem="gWg-dh-5Eg" secondAttribute="top" id="qFw-vW-HKD"/>
+                                                <constraint firstItem="k72-fq-607" firstAttribute="top" secondItem="yyn-jP-jnl" secondAttribute="bottom" constant="10" id="rj5-q3-xg8"/>
+                                                <constraint firstAttribute="trailing" secondItem="k72-fq-607" secondAttribute="trailing" constant="135" id="v3W-kk-MnG"/>
                                             </constraints>
-                                        </tableViewCellContentView>
+                                        </collectionViewCellContentView>
+                                        <size key="customSize" width="200" height="350"/>
                                         <connections>
-                                            <outlet property="bountyLabel" destination="Q5S-yw-wKM" id="isn-HO-E7C"/>
-                                            <outlet property="imgView" destination="UWo-gq-EEy" id="LpU-er-Byc"/>
-                                            <outlet property="nameLabel" destination="ntI-YE-c77" id="v2O-04-EJx"/>
+                                            <outlet property="bountyLabel" destination="FLc-Lq-yke" id="4hb-jo-OIG"/>
+                                            <outlet property="imgView" destination="yyn-jP-jnl" id="efq-O1-BHM"/>
+                                            <outlet property="nameLabel" destination="k72-fq-607" id="8uh-Bi-qnD"/>
                                         </connections>
-                                    </tableViewCell>
-                                </prototypes>
+                                    </collectionViewCell>
+                                </cells>
                                 <connections>
-                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="2dL-aw-gPQ"/>
-                                    <outlet property="delegate" destination="BYZ-38-t0r" id="U6L-n0-ob5"/>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="Twr-zD-fOj"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="LXz-dM-sBf"/>
                                 </connections>
-                            </tableView>
+                            </collectionView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="6En-6m-RYg" secondAttribute="trailing" id="Ljc-fm-Ysj"/>
-                            <constraint firstItem="6En-6m-RYg" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="VpD-ao-Akz"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="6En-6m-RYg" secondAttribute="bottom" constant="19" id="sdQ-IX-VDh"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="top" secondItem="6En-6m-RYg" secondAttribute="top" constant="8" id="uwp-13-2Io"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="7uO-ex-tqB" secondAttribute="trailing" id="Eo3-gK-2rw"/>
+                            <constraint firstItem="7uO-ex-tqB" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="H2e-5t-2aX"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="7uO-ex-tqB" secondAttribute="bottom" id="hiN-bA-0Pb"/>
+                            <constraint firstItem="7uO-ex-tqB" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="hph-aa-Vjc"/>
                         </constraints>
                     </view>
                     <connections>
@@ -142,8 +149,10 @@
                     </view>
                     <connections>
                         <outlet property="bountyLabel" destination="cM0-Zs-Fk1" id="VLK-9K-G1m"/>
+                        <outlet property="bountyLabelCenterX" destination="ozL-OU-R6p" id="l7s-qo-V1P"/>
                         <outlet property="image" destination="bO6-WM-ASm" id="Erv-mJ-PNj"/>
                         <outlet property="nameLabel" destination="kgm-cH-ybC" id="ebl-YE-zHC"/>
+                        <outlet property="nameLabelCenterX" destination="gjg-9I-XOP" id="FEG-Q7-Syc"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9Nj-wn-J1J" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
