--- a/AppleMusicApp/AppleMusicStApp/Home/Base.lproj/Main.storyboard
+++ b/AppleMusicApp/AppleMusicStApp/Home/Base.lproj/Main.storyboard
@@ -3,7 +3,7 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
         <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -69,7 +69,7 @@
                                             </constraints>
                                         </collectionViewCellContentView>
                                         <connections>
-                                            <outlet property="trackArtist" destination="y1U-sU-CcJ" id="pSN-6M-7Ks"/>
+                                            <outlet property="trackArtist" destination="y1U-sU-CcJ" id="Ob0-Mh-JSV"/>
                                             <outlet property="trackThumbnail" destination="uKk-dv-baQ" id="sxS-Kg-gT7"/>
                                             <outlet property="trackTitle" destination="e24-Bw-021" id="0Ba-Nk-obL"/>
                                         </connections>
